--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <title>{% block title %}Finance Tracker{% endblock %}</title>
 </head>
 <body>
+<header><h1>Finance Tracker</h1></header>
   <main>
     {% block content %}
     {% endblock %}
   </main>
 </body>
 </html>
+
+
