--- a/templates/budget/project-list.html
+++ b/templates/budget/project-list.html
@@ -2,11 +2,12 @@
 {% block content%}
 <div class="container">
     <div class="noproject-wrapper">
+        {% if user.is_authenticated %}
         <h3 class="grey-text">Sorry, you don't have any projects yet.</h3>
-        <a href="" class="btn-large grey">
-            <i class="material-icons white-text left">add_circle</i>
-            <span class="bold">Add Projects</span>
+        <a href="#" class="btn btn-info btn-lg">
+          <span class="glyphicon glyphicon-plus"></span>Add Project
         </a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
