--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">logout</a></p>
-  <p><a href="{% url 'password_reset' %}">reset password</a></p>
+<p><a href="{% url 'logout' %}">logout</a> / <a href="{% url 'password_reset' %}">reset password</a></p>
+  <p><a href="{% url 'list' %}">Track My Finance</a></p>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
