--- a/templates/budget/project-list.html
+++ b/templates/budget/project-list.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content%}
 <div class="container">
     <div class="noproject-wrapper">
         {% if user.is_authenticated %}
-        <h3 class="grey-text">Sorry, you don't have any projects yet.</h3>
-        <a href="#" class="btn btn-info btn-lg">
-          <span class="glyphicon glyphicon-plus"></span>Add Project
-        </a>
+        <h3 class="grey-text">Sorry, you don't have any records.</h3>
+        <span><a href="" class="btn btn-danger">
+          <span class="glyphicon glyphicon-plus"></span>Add Spending
+        </a> <a href="" class="btn btn-success">
+          <span class="glyphicon glyphicon-plus"></span>Add Income
+        </a></span>
         {% endif %}
     </div>
 </div>
