--- a/templates/budget/project-list.html
+++ b/templates/budget/project-list.html
@@ -4,12 +4,10 @@
 <div class="container">
     <div class="noproject-wrapper">
         {% if user.is_authenticated %}
-        <h3 class="grey-text">Sorry, you don't have any records.</h3>
-        <span><a href="" class="btn btn-danger">
-          <span class="glyphicon glyphicon-plus"></span>Add Spending
-        </a> <a href="" class="btn btn-success">
-          <span class="glyphicon glyphicon-plus"></span>Add Income
-        </a></span>
+        <h3 class="grey-text">Sorry, you don't have any connected accounts.</h3>
+        <a href="" class="btn btn-primary">
+          <span class="glyphicon glyphicon-plus"></span>Add Account
+        </a>
         {% endif %}
     </div>
 </div>
