Updated button icon

--- a/templates/budget/project-list.html
+++ b/templates/budget/project-list.html
@@ -6,7 +6,8 @@
         {% if user.is_authenticated %}
         <h3 class="grey-text">Sorry, you don't have any connected accounts.</h3>
         <a href="" class="btn btn-primary">
-          <span class="glyphicon glyphicon-plus"></span>Add Account
+            <i class="material-icons">add_circle</i>
+            <span class="bold">Add Account</span>
         </a>
         {% endif %}
     </div>
