--- a/templates/budget/project-list.html
+++ b/templates/budget/project-list.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="noproject-wrapper">
         {% if user.is_authenticated %}
-        <h3 class="grey-text">Sorry, you don't have any connected accounts.</h3>
+        <h3 class="grey-text">Sorry, you don't have any linked accounts.</h3>
         <a href="" class="btn btn-primary">
             <i class="material-icons">add_circle</i>
             <span class="bold">Add Account</span>
